--- a/tests_app/Base.lproj/LaunchScreen.storyboard
+++ b/tests_app/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,16 +10,39 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Qbg-ER-do9"/>
+                        <viewControllerLayoutGuide type="bottom" id="VoX-xo-wxP"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starry_night" translatesAutoresizingMaskIntoConstraints="NO" id="M3H-Jl-PcC">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="letter_test_app" translatesAutoresizingMaskIntoConstraints="NO" id="uvN-Vj-YDK">
+                                <rect key="frame" x="0.0" y="94" width="270" height="270"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="M3H-Jl-PcC" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="AFu-JE-k3A"/>
+                            <constraint firstItem="uvN-Vj-YDK" firstAttribute="top" secondItem="Qbg-ER-do9" secondAttribute="bottom" constant="50" id="Ldg-6z-551"/>
+                            <constraint firstAttribute="trailing" secondItem="M3H-Jl-PcC" secondAttribute="trailing" id="X35-ti-9xm"/>
+                            <constraint firstAttribute="bottom" secondItem="M3H-Jl-PcC" secondAttribute="bottom" id="c2v-0j-f3O"/>
+                            <constraint firstItem="uvN-Vj-YDK" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="gd0-1l-HSs"/>
+                            <constraint firstItem="M3H-Jl-PcC" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nl7-HR-MoZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="letter_test_app" width="270" height="270"/>
+        <image name="starry_night" width="750" height="1334"/>
+    </resources>
 </document>
